# data-sources

./: LICENSE  README.md  pyproject.toml  surfacelevel.json  test.json  test_bad.json
.github/: pull_request_template.md
.github/workflows/: add-tags.yml  blank.yml  github.ci.yml  linter.yml  tags.yml  validate.yml
chains/: backend_chain_inventory.json  nodes.json
chains/evm/1/: config.json
chains/evm/10/: config.json
chains/evm/100/: config.json
chains/evm/1116/: config.json
chains/evm/137/: config.json
dapps/: backend_amm_inventory.json
dexguru_data_sources/: AUTHORS.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
dexguru_data_sources/.github/: ISSUE_TEMPLATE.md
dexguru_data_sources/dexguru_data_sources/: __init__.py  dexguru_data_sources.py  enums.py
dexguru_data_sources/dexguru_data_sources/api_data/dapps/evm/dodo/: config.json
dexguru_data_sources/dexguru_data_sources/api_data/dapps/evm/ellipsis/: config.json
dexguru_data_sources/dexguru_data_sources/api_data/dapps/evm/saddle/: config.json
dexguru_data_sources/dexguru_data_sources/api_data/dapps/evm/uniswap_v2/: config.json
dexguru_data_sources/dexguru_data_sources/models/: amm_inventory_model.py  base_model.py  chain_inventory_model.py  token_inventory.py  values.py
dexguru_data_sources/docs/: Makefile  conf.py  installation.rst  make.bat  usage.rst
dexguru_data_sources/tests/: __init__.py  test_dexguru_data_sources.py
tests/: chains.schema.json  dapps.schema.json  test_validation.py  tokenlist.schema.json  validation.py
(+33 files in other folders)
