[tool.poetry]
name = "data-sources"
version = "0.1.0"
description = ""
authors = ["Vitaly Vakhteev <vitaly.v@techusage.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.1"
jsonschema = "^4.17.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
